src/hotspot/share/gc/g1/g1ConcurrentMark.hpp
@@ -226,6 +226,7 @@ private:
     size_t capacity() const { return _capacity; }
 
     bool expand();
+    bool expand(size_t new_capacity);
 
     TaskQueueEntryChunk* allocate_new_chunk();
   };
